[gd_scene load_steps=17 format=3 uid="uid://br23rsitmom8f"]

[ext_resource type="Script" path="res://components/activity_button.gd" id="1_wtisg"]
[ext_resource type="Texture2D" uid="uid://b2qan52u6i16x" path="res://assets/ui/activity_button/completed.png" id="1_yr5jg"]
[ext_resource type="Texture2D" uid="uid://dok8myynbj3m6" path="res://assets/ui/activity_button/locked.png" id="2_5ochq"]
[ext_resource type="Texture2D" uid="uid://bhtehbhbjfloj" path="res://assets/ui/activity_button/unlocked.png" id="3_2rfxm"]
[ext_resource type="Texture2D" uid="uid://t48xa6udbsb6" path="res://assets/images/player/shadow.png" id="4_2pkyv"]
[ext_resource type="Texture2D" uid="uid://cbqnk8u4hhv5o" path="res://assets/images/player/hair_right.png" id="5_pwvgl"]
[ext_resource type="Texture2D" uid="uid://s71oa0dntqh0" path="res://assets/images/player/hair_left.png" id="6_561ls"]
[ext_resource type="Texture2D" uid="uid://dkg1gbic32vlc" path="res://assets/images/player/body.png" id="7_7i2tg"]
[ext_resource type="Texture2D" uid="uid://cn8neirqiaxah" path="res://assets/images/player/eyes.png" id="8_j6cl5"]
[ext_resource type="Texture2D" uid="uid://coodfp3wkyy5g" path="res://assets/images/player/hand.png" id="9_v3jfj"]

[sub_resource type="Animation" id="Animation_30trb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Body/Hair:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Body/Hair/HairLeft:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Body/Hair/HairRight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/Body/HandLeft:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(135, 28)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton2D/Body/HandRight:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-135, 26)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton2D/Body:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_33ecu"]
resource_name = "greeting"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Body:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-7.45058e-08, 5), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Body/HandRight:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-135, 26), Vector2(-144.579, -28.3245), Vector2(-139.543, 0.234974), Vector2(-144.579, -28.3245), Vector2(-139.543, 0.234974), Vector2(-135, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Body/Hair/HairLeft:rotation")
tracks/3/interp = 4
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0217202, -0.0217202, 0.146411, -0.0217202]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Body/Hair/HairRight:rotation")
tracks/4/interp = 4
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0154007, -0.0154007, 0.269285, -0.0154007]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/Shadow:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.02469, 1.02469), Vector2(1.21544, 1.21544), Vector2(1.02469, 1.02469)]
}

[sub_resource type="Animation" id="Animation_2rpjh"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Shadow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.16, 1.16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Body/Hair:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -75), Vector2(0, -71)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Body/Hair/HairLeft:rotation")
tracks/3/interp = 4
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.141254]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Body/Hair/HairRight:rotation")
tracks/4/interp = 4
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.335338]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/Body/HandLeft:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(135, 28), Vector2(135, 19)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton2D/Body/HandRight:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-135, 26), Vector2(-135, 17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x8fkk"]
_data = {
"RESET": SubResource("Animation_30trb"),
"greeting": SubResource("Animation_33ecu"),
"idle": SubResource("Animation_2rpjh")
}

[sub_resource type="Animation" id="Animation_fuo6s"]
resource_name = "idle"
length = 7.5
loop_mode = 1
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SingleAnimator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("idle", "greeting", "idle", "idle"),
"times": PackedFloat32Array(0, 2, 3.5, 5.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nh01p"]
_data = {
"idle": SubResource("Animation_fuo6s")
}

[node name="ActivityButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 126.0
offset_bottom = 124.0
pivot_offset = Vector2(63, 62)
script = ExtResource("1_wtisg")

[node name="CompletedButton" type="TextureButton" parent="."]
visible = false
layout_mode = 1
offset_right = 126.0
offset_bottom = 124.0
pivot_offset = Vector2(63, 63)
texture_normal = ExtResource("1_yr5jg")
ignore_texture_size = true
stretch_mode = 5

[node name="LockedButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 126.0
offset_bottom = 124.0
pivot_offset = Vector2(63, 63)
texture_normal = ExtResource("2_5ochq")
ignore_texture_size = true
stretch_mode = 5

[node name="UnlockedButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_right = 126.0
offset_bottom = 124.0
pivot_offset = Vector2(63, 63)
texture_normal = ExtResource("3_2rfxm")
ignore_texture_size = true
stretch_mode = 5

[node name="Skeleton2D" type="Skeleton2D" parent="UnlockedButton"]
position = Vector2(63, -15)
scale = Vector2(0.8, 0.8)

[node name="Shadow" type="Bone2D" parent="UnlockedButton/Skeleton2D"]
position = Vector2(0, 89)
rest = Transform2D(1, 0, 0, 1, 0, 89)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = 0.0

[node name="Sprite2D" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Shadow"]
modulate = Color(1, 1, 1, 0.45098)
texture = ExtResource("4_2pkyv")

[node name="Body" type="Bone2D" parent="UnlockedButton/Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Hair" type="Bone2D" parent="UnlockedButton/Skeleton2D/Body"]
position = Vector2(0, -75)
rest = Transform2D(1, 0, 0, 1, 0, -75)

[node name="HairLeft" type="Bone2D" parent="UnlockedButton/Skeleton2D/Body/Hair"]
position = Vector2(22, 6)
rest = Transform2D(1, 0, 0, 1, 22, 6)
auto_calculate_length_and_angle = false
length = 25.0
bone_angle = -46.0

[node name="Sprite2D" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body/Hair/HairLeft"]
texture = ExtResource("5_pwvgl")

[node name="HairRight" type="Bone2D" parent="UnlockedButton/Skeleton2D/Body/Hair"]
position = Vector2(2, -10)
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(1, 0, 0, 1, 2, -10)
auto_calculate_length_and_angle = false
length = 30.0
bone_angle = -80.0

[node name="Sprite2D" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body/Hair/HairRight"]
texture = ExtResource("6_561ls")

[node name="BodySprite" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body"]
texture = ExtResource("7_7i2tg")

[node name="EyesSprite" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body"]
position = Vector2(-7, -22)
texture = ExtResource("8_j6cl5")

[node name="HandLeft" type="Bone2D" parent="UnlockedButton/Skeleton2D/Body"]
position = Vector2(135, 28)
rest = Transform2D(1, 0, 0, 1, 135, 28)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = 0.0

[node name="Sprite2D" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body/HandLeft"]
texture = ExtResource("9_v3jfj")

[node name="HandRight" type="Bone2D" parent="UnlockedButton/Skeleton2D/Body"]
position = Vector2(-135, 26)
rest = Transform2D(1, 0, 0, 1, -135, 26)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = 0.0

[node name="Sprite2D" type="Sprite2D" parent="UnlockedButton/Skeleton2D/Body/HandRight"]
texture = ExtResource("9_v3jfj")

[node name="SingleAnimator" type="AnimationPlayer" parent="UnlockedButton"]
libraries = {
"": SubResource("AnimationLibrary_x8fkk")
}

[node name="GlobalAnimator" type="AnimationPlayer" parent="UnlockedButton"]
root_node = NodePath("../Skeleton2D")
libraries = {
"": SubResource("AnimationLibrary_nh01p")
}
